Add cosim basic framework

--- a/config.h.in
+++ b/config.h.in
@@ -4,6 +4,9 @@
 #undef AC_APPLE_UNIVERSAL_BUILD
 
 /* Define if subproject MCPPBS_SPROJ_NORM is enabled */
+#undef COSIM_ENABLED
+
+/* Define if subproject MCPPBS_SPROJ_NORM is enabled */
 #undef CUSTOMEXT_ENABLED
 
 /* Default value for --isa switch */
@@ -32,6 +35,9 @@
 
 /* define if the Boost::ASIO library is available */
 #undef HAVE_BOOST_ASIO
+
+/* define if the Boost::Regex library is available */
+#undef HAVE_BOOST_REGEX
 
 /* Dynamic library loading is supported */
 #undef HAVE_DLOPEN
@@ -126,7 +132,7 @@
 /* Define to 1 if you have the ANSI C header files. */
 #undef STDC_HEADERS
 
-/* Default value for --with-target switch */
+/* Default value for --target switch */
 #undef TARGET_ARCH
 
 /* Define WORDS_BIGENDIAN to 1 if your processor stores words with the most
