--- a/riscv/riscv.mk.in
+++ b/riscv/riscv.mk.in
@@ -1266,22 +1266,24 @@ riscv_insn_ext_cmo = \
 	cbo_zero \
 
 riscv_insn_list = \
-	$(riscv_insn_ext_a) \
-	$(riscv_insn_ext_c) \
-	$(riscv_insn_ext_i) \
-	$(riscv_insn_ext_m) \
-	$(riscv_insn_ext_f) \
-	$(riscv_insn_ext_d) \
-	$(riscv_insn_ext_zfh) \
-	$(riscv_insn_ext_q) \
-	$(riscv_insn_ext_b) \
-    $(riscv_insn_ext_k) \
-	$(if $(HAVE_INT128),$(riscv_insn_ext_v),) \
-	$(riscv_insn_ext_h) \
-	$(riscv_insn_ext_p) \
 	$(riscv_insn_priv) \
-	$(riscv_insn_svinval) \
-	$(riscv_insn_ext_cmo) \
+
+	# $(riscv_insn_ext_a) \
+	# $(riscv_insn_ext_c) \
+	# $(riscv_insn_ext_i) \
+	# $(riscv_insn_ext_m) \
+	# $(riscv_insn_ext_f) \
+	# $(riscv_insn_ext_d) \
+	# $(riscv_insn_ext_zfh) \
+	# $(riscv_insn_ext_q) \
+	# $(riscv_insn_ext_b) \
+    # $(riscv_insn_ext_k) \
+	# $(if $(HAVE_INT128),$(riscv_insn_ext_v),) \
+	# $(riscv_insn_ext_h) \
+	# $(riscv_insn_ext_p) \
+	# $(riscv_insn_priv) \
+	# $(riscv_insn_svinval) \
+	# $(riscv_insn_ext_cmo) \
 
 riscv_gen_srcs = \
 	$(addsuffix .cc,$(riscv_insn_list))
