--- a/riscv/riscv.mk.in
+++ b/riscv/riscv.mk.in
@@ -1266,6 +1266,12 @@ riscv_insn_ext_cmo = \
 	cbo_zero \
 
 riscv_insn_list = \
+    $(riscv_insn_ext_i) \
+    $(riscv_insn_ext_m) \
+    $(riscv_insn_ext_a) \
+    $(riscv_insn_ext_f) \
+    $(riscv_insn_ext_d) \
+    $(riscv_insn_ext_c) \
 	$(riscv_insn_priv) \
 
 	# $(riscv_insn_ext_a) \
