--- a/riscv/riscv.mk.in
+++ b/riscv/riscv.mk.in
@@ -1273,6 +1273,7 @@ riscv_insn_list = \
     $(riscv_insn_ext_d) \
     $(riscv_insn_ext_c) \
 	$(riscv_insn_priv) \
+    $(riscv_insn_ext_k) \
 
 	# $(riscv_insn_ext_a) \
 	# $(riscv_insn_ext_c) \
