update make config

--- a/cosim/cosim.mk.in
+++ b/cosim/cosim.mk.in
@@ -10,6 +10,13 @@ cosim_srcs = 		\
   morpher.cc		\
   magic_device.cc
 
+cosim_install_hdrs = 	\
+  cj.h					\
+  morpher.h				\
+  masker_enum.h			\
+  magic_type.h			\
+  magic_device.h		\
+
 cosim_install_prog_srcs = \
 
 cosim_install_lib = yes
