--- a/cosim/cosim.mk.in
+++ b/cosim/cosim.mk.in
@@ -22,3 +22,6 @@ cosim_install_prog_srcs = \
 cosim_install_lib = yes
 
 cosim_install_shared_lib = yes
+
+cosim_install_prog_srcs = \
+	spike-solve.cc \
